# Xbot

./: .gitignore  README.md
Xbot version 2/: app.py  main.py  rawProfiles_odukoyaisaac.csv  rawProfiles_stackhodler.csv
Xbot version 2/dummies/: odukoyaisaac_2.csv  promtp pandas.txt  stackhodler.csv  sth.txt  test.py
Xbot version 2/scoringDir/: CMakeLists.txt
Xbot version 2/scoringDir/src/: main.cpp  main2.cpp
Xbot version 2/scoringDir/src/xlnt/: CONTROL
Xbot version 2/scoringDir/src/xlnt/share/xlnt/: vcpkg.spdx.json  vcpkg_abi_info.txt
docs/: Profiles_Aina_Iyabo.csv  Profiles_stackhodler.csv
src/: App.py  cookies.json  main.py
src/RawFiles/: rawProfiles_odukoyaisaac.csv
src/followers/: next_button_stackhodler.txt
src/following/: rawProfiles_stackhodler.csv
tests/: dummyUserProfile.txt  dummyprofile.py  rawProfiles_test.csv  test_main.py
